# libgeneprog

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  geneprog.pc.in
examples/: testbst.c  testcgp  testcgp.c  testgenepool.c
include/: bst-data.h  cgp-data.h  gene.h  genepool.h
src/: CMakeLists.txt  bst-data.c  cgp-data.c  genepool.c
test/: CMakeLists.txt  bst_test.c  bst_test.h  cgp_test.c  cgp_test.h  genepool_test.c  genepool_test.h  test_runner.c
